2011-09-29  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_line): Implemented horizontal all, some,
	none, maybe and cases directives.
	(match_files): Recognize horizontal version of these directives
	by the presence of the extra symbol t and do not process.
	Also, bugfix in the all directive: not resetting the
	all_match flag when short circuiting out.
	* parser.y (clause_parts_h, additional_parts_h): New nonterminals.
	(elem): New clauses added.

2011-09-29  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (chars_k): New variable.
	(match_line): Keyword arguments in coll implemented.
	(match_init): chars_k variable initialized.

	* parser.l (COLL): Lexical syntax changed to allow for
	argument material.

	* parser.y (elem): Coll syntax rewritten for arguments.

	* txr.1: Updated.

2011-09-28  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (mingap_k, maxgap_k, gap_k, times_k, lines_k): New
	symbol variables.
	(match_lines): Keyword arguments in collect implemented.
	(match_init): New function.

	* match.h (match_init): Declared.

	* parser.l (COLLECT): Lexical syntax changed for COLLECT to
	allow for argument material.

	* parser.y (%union): obj renamed to val.
	(exprs_opt): New nonterminal.
	(collect_clause): Rewritten for arguments.

	* txr.c (main): Call to match_init introduced.

2011-09-28  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_line): Bugfix in double var. Do not
	prepend the next_pat to the specline if it is nil.

2011-09-28  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_line): Logic restructured to allow for
	regex variables which also have nested variables.
	Previously this code was assuming that the cases were
	mutually exclusive, and the parser happened to work that way.
	Also, added support for a "double var" match which occurs
	when an unbound variable is followed by a regex variable.
	This case should be allowed because it makes sense.
	It's similar to a variable followed by a regex, except
	that the regex is also a variable binding.
