@@ -1,5 +1,12 @@
 2011-09-29  Kaz Kylheku  <kaz@kylheku.com>
 
+	* parser.l: Implemented backslash continuations in SPECIAL
+	state, regexes and string literals.
+
+	* txr.1: Documented.
+
+2011-09-29  Kaz Kylheku  <kaz@kylheku.com>
+
 	* match.c (match_line): Implemented horizontal all, some,
 	none, maybe and cases directives.
 	(match_files): Recognize horizontal version of these directives
